# sync-claude-projects-to-sharedhost

./: README.md  Sync to Web.spec  build-macos.command  launch.command  pyproject.toml
src/sync_to_web/: __main__.py  claude_bridge.py  config_store.py  logging_bus.py  models.py  remote_clients.py  sync_engine.py  ui.py
src/sync_to_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
